fixes quote box on mobile

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -143,8 +143,8 @@ li.nav-item.active{
 .quotecontainer {
   background-color:rgba(0,0,0,0.5) !important;
   box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.2);
-  height: 110px;
-  width: 500px
+  // height: 110px;
+  // width: 19rem
 }
 
 #portfolioCard {
